--- a/src/Siwapp/InvoiceBundle/Resources/views/Partials/payments.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Partials/payments.html.twig
@@ -6,7 +6,7 @@
     <h3 class="title">{% trans %}Payments{% endtrans %}</h3>
     <div class="content">
       {# AJAX zone #}
-      {% include "SiwappInvoiceBundle:Default:payments_form.html.twig" %}
+      {% include "SiwappInvoiceBundle:Partials:payments_form.html.twig" %}
       {# AJAX zone #}
     </div>
   </div>
