renaming to global settings

--- a/src/Siwapp/ConfigBundle/Resources/views/Default/globalSettings.html.twig
+++ b/src/Siwapp/ConfigBundle/Resources/views/Default/globalSettings.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
   
-  <form action="{{ path('configuration_settings') }}" method="post" {{ form_enctype(form) }}>
+  <form action="{{ path('global_settings') }}" method="post" {{ form_enctype(form) }}>
       {{ form_widget(form) }}
       <input type="submit" />
   </form>
