bootstrap-1.4.0: toggle buttons
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/InvoiceBundle/Resources/views/Partials/search.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Partials/search.html.twig
@@ -33,7 +33,7 @@
         <li class="buttons">
           <button id="search-submit" type="submit" class="btn primary icon small search alternative">{% trans %}Search{% endtrans %}</button>
           <button id="search-reset" type="reset" class="btn secondary small icon loop">{% trans %}Reset{% endtrans %}</button>
-          <button id="search-advanced" type="button" class="btn icon settings small">{% trans %}Advanced {% endtrans %}</button>
+          <button id="search-advanced" type="button" data-toggle="toggle" class="btn icon settings small">{% trans %}Advanced {% endtrans %}</button>
         </li>
       </ul>
     </fieldset>
