Changes pre-twitter-bootstrap 2.0
Signed-off-by: Carlos Escribano <carlos@markhaus.com>

--- a/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
+++ b/src/Siwapp/InvoiceBundle/Resources/views/Default/edit.html.twig
@@ -1,22 +1,263 @@
 {% extends "::base.html.twig" %}
 
+
+{% form_theme form _self %}
+{% use 'form_div_layout.html.twig' with
+  textarea_widget as base_textarea_widget,
+  choice_widget as base_choice_widget,
+  date_widget as base_date_widget
+%}
+
+{% block field_widget %}
+{% spaceless %}
+  {% set type = type|default('text') %}
+  {% if type != 'hidden' %}<div class="input">{% endif %}
+    <input type="{{ type }}" {{ block('widget_attributes') }} {% if value is not empty %}value="{{ value }}" {% endif %} placeholder="{{ label }}"/>
+  {% if type != 'hidden' %}</div>{% endif %}
+{% endspaceless %}
+{% endblock %}
+
+{% block textarea_widget %}
+{% spaceless %}
+  <div class="input">
+    {{ block('base_textarea_widget') }}
+  </div>
+{% endspaceless %}
+{% endblock textarea_widget %}
+
+{% block choice_widget %}
+{% spaceless %}
+  <div class="input">
+    {{ block('base_choice_widget') }}
+  </div>
+{% endspaceless %}
+{% endblock choice_widget %}
+
+{% block date_widget %}
+{% spaceless %}
+  {{ block('base_date_widget') }}
+  {% if widget == 'single_text' %}
+  <script type="text/javascript">
+    jQuery(function($){ $('#{{ id }}').kendoDatePicker(); });
+  </script>
+  {% endif %}
+{% endspaceless %}
+{% endblock date_widget %}
+
+
 {% block searchform %}{% endblock %}
 
 {% block body %}
   
-  <form action="{{ path('invoice_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(form) }}>
-      {{ form_widget(form) }}
-      <input type="submit" />
-  </form>
+  {# {% form_theme form "SiwappInvoiceBundle:Form:invoice.html.twig" %} #}
   
-  <a href="#" class="addItem">Add Item</a>
-  <script type="text/javascript">
-    $('a.addItem').live('click', function(event){
-        event.preventDefault();
-        var collectionHolder = $('#siwapp_invoicebundle_invoicetype_items');
-        var prototype = collectionHolder.attr('data-prototype');
-        form = prototype.replace(/\$\$name\$\$/g, collectionHolder.children().length);
-        collectionHolder.append(form);
-    });
-  </script>
+  <article class="container invoice-like">
+    
+    <header class="title">
+      <h2>Invoice #10</h2>
+      <ul class="labels">
+        <li>
+          <span class="label pending">Pending</span>
+        </li>
+        <li>
+          <span class="label notice">Sent by Email</span>
+        </li>
+      </ul>
+    </header>
+    
+    <form action="{{ path('invoice_update', { 'id': entity.id }) }}" method="post" class="form-stacked" {{ form_enctype(form) }}>
+      
+      <div class="row" style="background:orange;">
+        <div class="span16">
+          {{ form_errors(form) }}
+        </div>
+      </div>
+      
+      <div class="row" style="background:yellow;">
+        <div class="span10">
+          
+          <h3>{% trans %}Customer Data{% endtrans %}</h3>
+          
+          <div class="row" style="background:purple;">
+            <div class="span6 clearfix">
+              {{ form_label(form.customer_name) }}
+              {{ form_widget(form.customer_name, {'attr': {'class': 'span6'}}) }}
+              {{ form_errors(form.customer_name) }}
+            </div>
+            <div class="span4 clearfix">
+              {{ form_label(form.customer_identification) }}
+              {{ form_widget(form.customer_identification, {'attr': {'class': 'span4'}}) }}
+              {{ form_errors(form.customer_identification) }}
+            </div>
+            <div class="span5 clearfix">
+              {{ form_label(form.customer_email) }}
+              {{ form_widget(form.customer_email, {'attr': {'class': 'span5'}}) }}
+              {{ form_errors(form.customer_email) }}
+            </div>
+            <div class="span5 clearfix">
+              {{ form_label(form.contact_person) }}
+              {{ form_widget(form.contact_person, {'attr': {'class': 'span5'}}) }}
+              {{ form_errors(form.contact_person) }}
+            </div>
+            <div class="span5 clearfix">
+              {{ form_label(form.invoicing_address) }}
+              {{ form_widget(form.invoicing_address, {'attr': {'class': 'span5 address'}}) }}
+              {{ form_errors(form.invoicing_address) }}
+            </div>
+            <div class="span5 clearfix">
+              {{ form_label(form.shipping_address) }}
+              {{ form_widget(form.shipping_address, {'attr': {'class': 'span5 address'}}) }}
+              {{ form_errors(form.shipping_address) }}
+            </div>
+          </div><!-- inner row -->
+        </div><!-- span10 -->
+        
+        <div class="span5 offset1" style="background:pink;">
+          
+          <h3>{% trans %}Invoice Properties{% endtrans %}</h3>
+          
+          <div class="form-inline">
+            
+            <div class="clearfix">
+              {{ form_label(form.series_id) }}
+              {{ form_widget(form.series_id, {'attr': {'class': 'span2'}}) }}
+              {{ form_errors(form.series_id) }}
+            </div>
+            <div class="clearfix">
+              {{ form_label(form.number) }}
+              {{ form_widget(form.number, {'attr': {'class': 'span2'}}) }}
+              {{ form_errors(form.number) }}
+            </div>
+            <div class="clearfix">
+              {{ form_label(form.issue_date) }}
+              {{ form_widget(form.issue_date, {'attr': {'class': 'span2'}}) }}
+              {{ form_errors(form.issue_date) }}
+            </div>
+            <div class="clearfix">
+              {{ form_label(form.due_date) }}
+              {{ form_widget(form.due_date, {'attr': {'class': 'span2'}}) }}
+              {{ form_errors(form.due_date) }}
+            </div>
+            
+          </div><!-- form inline -->
+        </div><!-- span5 -->
+      </div>
+      
+      <div class="row" style="background:cyan;">
+        <div class="span16">
+          
+          <table class="invoice-items">
+            <thead>
+              <tr>
+                <th>{% trans %}Concept{% endtrans %}</th>
+                <th>{% trans %}Qty/Hours{% endtrans %}</th>
+                <th>{% trans %}Unitary Cost{% endtrans %}</th>
+                <th>{% trans %}Discount{% endtrans %}</th>
+                <th>{% trans %}Taxes{% endtrans %}</th>
+                <th class="currency">{% trans %}Line Total{% endtrans %}</th>
+              </tr>
+            </thead>
+            <tbody data-prototype="{{ form_widget(form.items.get('prototype'))|e }}">
+              {% for item in form.items %}
+              <tr>
+                <td>
+                  {{ form_widget(item.invoice) }}
+                  {{ form_widget(item.description, { 'attr': { 'class': 'span8' } }) }}
+                </td>
+                <td>
+                  {{ form_widget(item.quantity, { 'attr': { 'class': 'span2' } }) }}
+                </td>
+                <td>
+                  {{ form_widget(item.unitary_cost, { 'attr': { 'class': 'span2' } }) }}
+                </td>
+                <td>
+                  {{ form_widget(item.discount, { 'attr': { 'class': 'span2' } }) }}
+                </td>
+                <td>
+                  <span class="label tax"><a href="#" class="iconic x"></a>VAT 18%</span>
+                  <span class="label tax"><a href="#" class="iconic x"></a>VAT 8%</span>
+                  <a href="#" class="iconic add">Add</a>
+                </td>
+                <td class="currency">
+                  LINE TOTAL
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          
+        </div>
+      </div>
+      
+      <div class="row totals">
+        <div class="span8">
+          
+          <a href="#" class="btn icon add addItem">Add Item</a>
+          <script type="text/javascript">
+              $('a.addItem').live('click', function(event){
+                  event.preventDefault();
+                  var collectionHolder = $('#siwapp_invoicebundle_invoicetype_items');
+                  var prototype = collectionHolder.attr('data-prototype');
+                  form = prototype.replace(/\$\$name\$\$/g, collectionHolder.children().length);
+                  collectionHolder.append(form);
+              });
+          </script>
+          
+        </div>
+        <div class="span5 offset3" style="background:green;">
+          <table>
+            <tbody>
+              <tr>
+                <th>{% trans %}Subtotal{% endtrans %}</th>
+                <td class="currency">€ 405.00</td>
+              </tr>
+              <tr>
+                <th>VAT 18%</th>
+                <td class="currency">€ 72.90</td>
+              </tr>
+              <tr>
+                <th>VAT 8%</th>
+                <td class="currency">€ 32.4</td>
+              </tr>
+              <tr>
+                <th>Invoice Total (EUR)</th>
+                <td class="currency">€ 510.30</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="span8">
+          <div class="clearfix">
+            {{ form_label(form.terms) }}
+            {{ form_widget(form.terms, {'attr': {'class': 'span8 terms'}}) }}
+            {{ form_errors(form.terms) }}
+          </div>
+        </div>
+        <div class="span8">
+          <div class="clearfix">
+            {{ form_label(form.notes) }}
+            {{ form_widget(form.notes, {'attr': {'class': 'span8 terms'}}) }}
+            {{ form_errors(form.notes) }}
+          </div>
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="span16" style="background-color:red;">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      
+      {{ form_rest(form) }}
+      
+      <div class="actions">
+        <button type="submit" class="btn primary">{% trans %}Save{% endtrans %}</button>
+      </div>
+    </form>
+    
+  </article>
+  
 {% endblock %}
